[package]
name = "buaa_iclass_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
buaa_api = { git = "https://github.com/fontlos/buaa-api", features = ["table"], rev = "1335c1e" }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
time = "0.3.36"
tokio = "1.39.2"
